[gd_scene load_steps=2 format=3 uid="uid://8nfm2slyjqej"]

[ext_resource type="Script" uid="uid://cko38doj6m2tj" path="res://editor/timeline/audio_clip_ui.gd" id="1_audioclip"]

[node name="AudioClipUI" type="PanelContainer"]
custom_minimum_size = Vector2(0, 110)
offset_right = 100.0
offset_bottom = 110.0
script = ExtResource("1_audioclip")

[node name="ClipLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "clip_name.wav"
vertical_alignment = 1
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
